// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RunwayConditionPicker · visual regression (size × state) size=compact, closed 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": false,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": "Dry",
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      {
        "backgroundColor": "#11161F",
        "borderColor": "rgba(255, 255, 255, 0.08)",
        "minHeight": 44,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
    ]
  }
  testID="picker"
>
  <Text
    allowFontScaling={true}
    numberOfLines={1}
    style={
      [
        {
          "color": "#E6EDF3",
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
          "textAlign": "auto",
        },
        undefined,
      ]
    }
  >
    Dry
  </Text>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": "#8B949E",
          "fontSize": 18,
        },
        undefined,
        {
          "fontFamily": "ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
    testID="picker-chevron"
  >
    
  </Text>
</View>
`;

exports[`RunwayConditionPicker · visual regression (size × state) size=compact, open (sheet visible) 1`] = `
[
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": true,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": "Dry",
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        {
          "backgroundColor": "#11161F",
          "borderColor": "rgba(255, 255, 255, 0.08)",
          "minHeight": 44,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
      ]
    }
    testID="picker"
  >
    <Text
      allowFontScaling={true}
      numberOfLines={1}
      style={
        [
          {
            "color": "#E6EDF3",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
            "textAlign": "auto",
          },
          undefined,
        ]
      }
    >
      Dry
    </Text>
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#8B949E",
            "fontSize": 18,
          },
          undefined,
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
      testID="picker-chevron"
    >
      
    </Text>
  </View>,
  <Modal
    animationType="slide"
    onRequestClose={[Function]}
    testID="picker-sheet"
    transparent={true}
    visible={true}
  >
    <View
      accessibilityLabel="Cancel"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "rgba(0, 0, 0, 0.6)",
          "flex": 1,
          "justifyContent": "flex-end",
        }
      }
      testID="picker-sheet-backdrop"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#11161F",
            "borderTopLeftRadius": 16,
            "borderTopRightRadius": 16,
            "paddingBottom": 24,
            "paddingHorizontal": 12,
            "paddingTop": 12,
          }
        }
      >
        <View
          style={
            {
              "alignSelf": "center",
              "backgroundColor": "#6E7681",
              "borderRadius": 2,
              "height": 4,
              "marginBottom": 12,
              "opacity": 0.3,
              "width": 36,
            }
          }
        />
        <View
          style={
            [
              {
                "alignItems": "stretch",
                "flexDirection": "column",
                "gap": 8,
                "justifyContent": "flex-start",
              },
              undefined,
            ]
          }
        >
          <View
            accessibilityLabel="RUNWAY CONDITION"
            accessibilityRole="radiogroup"
            style={
              {
                "alignSelf": "center",
                "maxWidth": 560,
                "width": "100%",
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "stretch",
                    "flexDirection": "column",
                    "gap": 8,
                    "justifyContent": "flex-start",
                  },
                  undefined,
                ]
              }
            >
              <Text
                allowFontScaling={true}
                style={
                  [
                    {
                      "color": "#8B949E",
                      "fontFamily": "System",
                      "fontSize": 9,
                      "fontWeight": "600",
                      "letterSpacing": 0.54,
                      "lineHeight": 12,
                      "textAlign": "auto",
                    },
                    undefined,
                  ]
                }
              >
                RUNWAY CONDITION
              </Text>
              <View>
                <View
                  accessibilityLabel="Dry"
                  accessibilityRole="radio"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": true,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderBottomColor": "rgba(255, 255, 255, 0.08)",
                        "borderBottomWidth": 0.5,
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "minHeight": 44,
                        "paddingHorizontal": 12,
                        "paddingVertical": 8,
                      },
                    ]
                  }
                  testID="picker-sheet-option-dry"
                >
                  <Text
                    allowFontScaling={true}
                    numberOfLines={1}
                    style={
                      [
                        {
                          "color": "#00C2A8",
                          "fontFamily": "System",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 22,
                          "textAlign": "auto",
                        },
                        [
                          {
                            "flex": 1,
                          },
                          undefined,
                        ],
                      ]
                    }
                  >
                    Dry
                  </Text>
                  <Text
                    allowFontScaling={true}
                    style={
                      [
                        {
                          "color": "#00C2A8",
                          "fontFamily": "System",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 22,
                          "textAlign": "auto",
                        },
                        undefined,
                      ]
                    }
                  >
                    ✓
                  </Text>
                </View>
                <View
                  accessibilityLabel="Good (Wet, Damp)"
                  accessibilityRole="radio"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": false,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderBottomColor": "rgba(255, 255, 255, 0.08)",
                        "borderBottomWidth": 0.5,
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "minHeight": 44,
                        "paddingHorizontal": 12,
                        "paddingVertical": 8,
                      },
                    ]
                  }
                  testID="picker-sheet-option-goodWetDamp"
                >
                  <Text
                    allowFontScaling={true}
                    numberOfLines={1}
                    style={
                      [
                        {
                          "color": "#E6EDF3",
                          "fontFamily": "System",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 22,
                          "textAlign": "auto",
                        },
                        [
                          {
                            "flex": 1,
                          },
                          undefined,
                        ],
                      ]
                    }
                  >
                    Good (Wet, Damp)
                  </Text>
                </View>
                <View
                  accessibilityLabel="Good (Slush, Dry Snow, Wet Snow)"
                  accessibilityRole="radio"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": false,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderBottomColor": "rgba(255, 255, 255, 0.08)",
                        "borderBottomWidth": 0.5,
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "minHeight": 44,
                        "paddingHorizontal": 12,
                        "paddingVertical": 8,
                      },
                    ]
                  }
                  testID="picker-sheet-option-goodSlushSnow"
                >
                  <Text
                    allowFontScaling={true}
                    numberOfLines={1}
                    style={
                      [
                        {
                          "color": "#E6EDF3",
                          "fontFamily": "System",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 22,
                          "textAlign": "auto",
                        },
                        [
                          {
                            "flex": 1,
                          },
                          undefined,
                        ],
                      ]
                    }
                  >
                    Good (Slush, Dry Snow, Wet Snow)
                  </Text>
                </View>
                <View
                  accessibilityLabel="Good to Medium"
                  accessibilityRole="radio"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": false,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderBottomColor": "rgba(255, 255, 255, 0.08)",
                        "borderBottomWidth": 0.5,
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "minHeight": 44,
                        "paddingHorizontal": 12,
                        "paddingVertical": 8,
                      },
                    ]
                  }
                  testID="picker-sheet-option-goodToMedium"
                >
                  <Text
                    allowFontScaling={true}
                    numberOfLines={1}
                    style={
                      [
                        {
                          "color": "#E6EDF3",
                          "fontFamily": "System",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 22,
                          "textAlign": "auto",
                        },
                        [
                          {
                            "flex": 1,
                          },
                          undefined,
                        ],
                      ]
                    }
                  >
                    Good to Medium
                  </Text>
                </View>
                <View
                  accessibilityLabel="Medium"
                  accessibilityRole="radio"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": false,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderBottomColor": "rgba(255, 255, 255, 0.08)",
                        "borderBottomWidth": 0.5,
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "minHeight": 44,
                        "paddingHorizontal": 12,
                        "paddingVertical": 8,
                      },
                    ]
                  }
                  testID="picker-sheet-option-medium"
                >
                  <Text
                    allowFontScaling={true}
                    numberOfLines={1}
                    style={
                      [
                        {
                          "color": "#E6EDF3",
                          "fontFamily": "System",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 22,
                          "textAlign": "auto",
                        },
                        [
                          {
                            "flex": 1,
                          },
                          undefined,
                        ],
                      ]
                    }
                  >
                    Medium
                  </Text>
                </View>
                <View
                  accessibilityLabel="Medium to Poor"
                  accessibilityRole="radio"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": false,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderBottomColor": "rgba(255, 255, 255, 0.08)",
                        "borderBottomWidth": 0.5,
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "minHeight": 44,
                        "paddingHorizontal": 12,
                        "paddingVertical": 8,
                      },
                    ]
                  }
                  testID="picker-sheet-option-mediumToPoor"
                >
                  <Text
                    allowFontScaling={true}
                    numberOfLines={1}
                    style={
                      [
                        {
                          "color": "#E6EDF3",
                          "fontFamily": "System",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 22,
                          "textAlign": "auto",
                        },
                        [
                          {
                            "flex": 1,
                          },
                          undefined,
                        ],
                      ]
                    }
                  >
                    Medium to Poor
                  </Text>
                </View>
                <View
                  accessibilityLabel="Poor"
                  accessibilityRole="radio"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": false,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderBottomColor": "rgba(255, 255, 255, 0.08)",
                        "borderBottomWidth": 0,
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "minHeight": 44,
                        "paddingHorizontal": 12,
                        "paddingVertical": 8,
                      },
                    ]
                  }
                  testID="picker-sheet-option-poor"
                >
                  <Text
                    allowFontScaling={true}
                    numberOfLines={1}
                    style={
                      [
                        {
                          "color": "#E6EDF3",
                          "fontFamily": "System",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 22,
                          "textAlign": "auto",
                        },
                        [
                          {
                            "flex": 1,
                          },
                          undefined,
                        ],
                      ]
                    }
                  >
                    Poor
                  </Text>
                </View>
              </View>
              <View
                accessibilityLabel="Cancel"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "alignSelf": "center",
                      "borderColor": "rgba(255, 255, 255, 0.08)",
                      "borderRadius": 8,
                      "borderWidth": 1,
                      "marginTop": 12,
                      "minHeight": 44,
                      "paddingHorizontal": 24,
                      "paddingVertical": 8,
                    },
                  ]
                }
                testID="picker-sheet-cancel"
              >
                <Text
                  allowFontScaling={true}
                  style={
                    [
                      {
                        "color": "#E6EDF3",
                        "fontFamily": "System",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 22,
                        "textAlign": "auto",
                      },
                      undefined,
                    ]
                  }
                >
                  Cancel
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </Modal>,
]
`;

exports[`RunwayConditionPicker · visual regression (size × state) size=regular, closed 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": false,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": "Good (Wet, Damp)",
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      {
        "backgroundColor": "#11161F",
        "borderColor": "rgba(255, 255, 255, 0.08)",
        "minHeight": 72,
        "paddingHorizontal": 24,
        "paddingVertical": 16,
      },
    ]
  }
  testID="picker"
>
  <Text
    allowFontScaling={true}
    numberOfLines={1}
    style={
      [
        {
          "color": "#E6EDF3",
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
          "textAlign": "auto",
        },
        {
          "fontWeight": "500",
        },
      ]
    }
  >
    Good (Wet, Damp)
  </Text>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": "#8B949E",
          "fontSize": 22,
        },
        undefined,
        {
          "fontFamily": "ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
    testID="picker-chevron"
  >
    
  </Text>
</View>
`;

exports[`RunwayConditionPicker · visual regression (size × state) size=regular, open (sheet visible) 1`] = `
[
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": true,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": "Good (Wet, Damp)",
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        {
          "backgroundColor": "#11161F",
          "borderColor": "rgba(255, 255, 255, 0.08)",
          "minHeight": 72,
          "paddingHorizontal": 24,
          "paddingVertical": 16,
        },
      ]
    }
    testID="picker"
  >
    <Text
      allowFontScaling={true}
      numberOfLines={1}
      style={
        [
          {
            "color": "#E6EDF3",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
            "textAlign": "auto",
          },
          {
            "fontWeight": "500",
          },
        ]
      }
    >
      Good (Wet, Damp)
    </Text>
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#8B949E",
            "fontSize": 22,
          },
          undefined,
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
      testID="picker-chevron"
    >
      
    </Text>
  </View>,
  <Modal
    animationType="slide"
    onRequestClose={[Function]}
    testID="picker-sheet"
    transparent={true}
    visible={true}
  >
    <View
      accessibilityLabel="Cancel"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "rgba(0, 0, 0, 0.6)",
          "flex": 1,
          "justifyContent": "flex-end",
        }
      }
      testID="picker-sheet-backdrop"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#11161F",
            "borderTopLeftRadius": 16,
            "borderTopRightRadius": 16,
            "paddingBottom": 24,
            "paddingHorizontal": 12,
            "paddingTop": 12,
          }
        }
      >
        <View
          style={
            {
              "alignSelf": "center",
              "backgroundColor": "#6E7681",
              "borderRadius": 2,
              "height": 4,
              "marginBottom": 12,
              "opacity": 0.3,
              "width": 36,
            }
          }
        />
        <View
          style={
            [
              {
                "alignItems": "stretch",
                "flexDirection": "column",
                "gap": 8,
                "justifyContent": "flex-start",
              },
              undefined,
            ]
          }
        >
          <View
            accessibilityLabel="RUNWAY CONDITION"
            accessibilityRole="radiogroup"
            style={
              {
                "alignSelf": "center",
                "maxWidth": 560,
                "width": "100%",
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "stretch",
                    "flexDirection": "column",
                    "gap": 8,
                    "justifyContent": "flex-start",
                  },
                  undefined,
                ]
              }
            >
              <Text
                allowFontScaling={true}
                style={
                  [
                    {
                      "color": "#8B949E",
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": "600",
                      "letterSpacing": 0.6,
                      "lineHeight": 16,
                      "textAlign": "auto",
                    },
                    {
                      "fontWeight": "600",
                      "letterSpacing": 1,
                      "textTransform": "uppercase",
                    },
                  ]
                }
              >
                RUNWAY CONDITION
              </Text>
              <View>
                <View
                  accessibilityLabel="Dry"
                  accessibilityRole="radio"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": false,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderBottomColor": "rgba(255, 255, 255, 0.08)",
                        "borderBottomWidth": 0.5,
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "minHeight": 72,
                        "paddingHorizontal": 24,
                        "paddingVertical": 16,
                      },
                    ]
                  }
                  testID="picker-sheet-option-dry"
                >
                  <Text
                    allowFontScaling={true}
                    numberOfLines={1}
                    style={
                      [
                        {
                          "color": "#E6EDF3",
                          "fontFamily": "System",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 22,
                          "textAlign": "auto",
                        },
                        [
                          {
                            "flex": 1,
                          },
                          {
                            "fontWeight": "500",
                          },
                        ],
                      ]
                    }
                  >
                    Dry
                  </Text>
                </View>
                <View
                  accessibilityLabel="Good (Wet, Damp)"
                  accessibilityRole="radio"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": true,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderBottomColor": "rgba(255, 255, 255, 0.08)",
                        "borderBottomWidth": 0.5,
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "minHeight": 72,
                        "paddingHorizontal": 24,
                        "paddingVertical": 16,
                      },
                    ]
                  }
                  testID="picker-sheet-option-goodWetDamp"
                >
                  <Text
                    allowFontScaling={true}
                    numberOfLines={1}
                    style={
                      [
                        {
                          "color": "#00C2A8",
                          "fontFamily": "System",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 22,
                          "textAlign": "auto",
                        },
                        [
                          {
                            "flex": 1,
                          },
                          {
                            "fontWeight": "500",
                          },
                        ],
                      ]
                    }
                  >
                    Good (Wet, Damp)
                  </Text>
                  <Text
                    allowFontScaling={true}
                    style={
                      [
                        {
                          "color": "#00C2A8",
                          "fontFamily": "System",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 22,
                          "textAlign": "auto",
                        },
                        undefined,
                      ]
                    }
                  >
                    ✓
                  </Text>
                </View>
                <View
                  accessibilityLabel="Good (Slush, Dry Snow, Wet Snow)"
                  accessibilityRole="radio"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": false,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderBottomColor": "rgba(255, 255, 255, 0.08)",
                        "borderBottomWidth": 0.5,
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "minHeight": 72,
                        "paddingHorizontal": 24,
                        "paddingVertical": 16,
                      },
                    ]
                  }
                  testID="picker-sheet-option-goodSlushSnow"
                >
                  <Text
                    allowFontScaling={true}
                    numberOfLines={1}
                    style={
                      [
                        {
                          "color": "#E6EDF3",
                          "fontFamily": "System",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 22,
                          "textAlign": "auto",
                        },
                        [
                          {
                            "flex": 1,
                          },
                          {
                            "fontWeight": "500",
                          },
                        ],
                      ]
                    }
                  >
                    Good (Slush, Dry Snow, Wet Snow)
                  </Text>
                </View>
                <View
                  accessibilityLabel="Good to Medium"
                  accessibilityRole="radio"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": false,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderBottomColor": "rgba(255, 255, 255, 0.08)",
                        "borderBottomWidth": 0.5,
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "minHeight": 72,
                        "paddingHorizontal": 24,
                        "paddingVertical": 16,
                      },
                    ]
                  }
                  testID="picker-sheet-option-goodToMedium"
                >
                  <Text
                    allowFontScaling={true}
                    numberOfLines={1}
                    style={
                      [
                        {
                          "color": "#E6EDF3",
                          "fontFamily": "System",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 22,
                          "textAlign": "auto",
                        },
                        [
                          {
                            "flex": 1,
                          },
                          {
                            "fontWeight": "500",
                          },
                        ],
                      ]
                    }
                  >
                    Good to Medium
                  </Text>
                </View>
                <View
                  accessibilityLabel="Medium"
                  accessibilityRole="radio"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": false,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderBottomColor": "rgba(255, 255, 255, 0.08)",
                        "borderBottomWidth": 0.5,
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "minHeight": 72,
                        "paddingHorizontal": 24,
                        "paddingVertical": 16,
                      },
                    ]
                  }
                  testID="picker-sheet-option-medium"
                >
                  <Text
                    allowFontScaling={true}
                    numberOfLines={1}
                    style={
                      [
                        {
                          "color": "#E6EDF3",
                          "fontFamily": "System",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 22,
                          "textAlign": "auto",
                        },
                        [
                          {
                            "flex": 1,
                          },
                          {
                            "fontWeight": "500",
                          },
                        ],
                      ]
                    }
                  >
                    Medium
                  </Text>
                </View>
                <View
                  accessibilityLabel="Medium to Poor"
                  accessibilityRole="radio"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": false,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderBottomColor": "rgba(255, 255, 255, 0.08)",
                        "borderBottomWidth": 0.5,
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "minHeight": 72,
                        "paddingHorizontal": 24,
                        "paddingVertical": 16,
                      },
                    ]
                  }
                  testID="picker-sheet-option-mediumToPoor"
                >
                  <Text
                    allowFontScaling={true}
                    numberOfLines={1}
                    style={
                      [
                        {
                          "color": "#E6EDF3",
                          "fontFamily": "System",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 22,
                          "textAlign": "auto",
                        },
                        [
                          {
                            "flex": 1,
                          },
                          {
                            "fontWeight": "500",
                          },
                        ],
                      ]
                    }
                  >
                    Medium to Poor
                  </Text>
                </View>
                <View
                  accessibilityLabel="Poor"
                  accessibilityRole="radio"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": false,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderBottomColor": "rgba(255, 255, 255, 0.08)",
                        "borderBottomWidth": 0,
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "minHeight": 72,
                        "paddingHorizontal": 24,
                        "paddingVertical": 16,
                      },
                    ]
                  }
                  testID="picker-sheet-option-poor"
                >
                  <Text
                    allowFontScaling={true}
                    numberOfLines={1}
                    style={
                      [
                        {
                          "color": "#E6EDF3",
                          "fontFamily": "System",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 22,
                          "textAlign": "auto",
                        },
                        [
                          {
                            "flex": 1,
                          },
                          {
                            "fontWeight": "500",
                          },
                        ],
                      ]
                    }
                  >
                    Poor
                  </Text>
                </View>
              </View>
              <View
                accessibilityLabel="Cancel"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "alignSelf": "center",
                      "borderColor": "rgba(255, 255, 255, 0.08)",
                      "borderRadius": 8,
                      "borderWidth": 1,
                      "marginTop": 12,
                      "minHeight": 72,
                      "paddingHorizontal": 24,
                      "paddingVertical": 16,
                    },
                  ]
                }
                testID="picker-sheet-cancel"
              >
                <Text
                  allowFontScaling={true}
                  style={
                    [
                      {
                        "color": "#E6EDF3",
                        "fontFamily": "System",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 22,
                        "textAlign": "auto",
                      },
                      {
                        "fontWeight": "500",
                      },
                    ]
                  }
                >
                  Cancel
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </Modal>,
]
`;
